# metopt_2

./: CMakeLists.txt  brent_method.h  conjugate_gradients.h  diag_form.h  dichotomy_method.h  fibonacci_method.h  functions.h  golden_ratio_method.h  gradient_descent.h  main.cpp  methods.cpp  optimizable.h  optimizing_method.h  parabola_method.h  steepest_descent.h  utils.h  vector_functions.h
